[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "twitterapi-x-reader"
version = "0.4.2"
description = "Portable skill and CLI helpers for reading X/Twitter data and videos through twitterapi.io."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "nicshik" }]
dependencies = [
  "certifi>=2024.0.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/nicshik/tweet-api-skill"
Documentation = "https://docs.twitterapi.io/"
Source = "https://github.com/nicshik/tweet-api-skill"
Issues = "https://github.com/nicshik/tweet-api-skill/issues"

[project.scripts]
xapi = "twitterapi_call:main"
xmedia = "twitterapi_media:main"
xread = "twitterapi_fetch:main"

[tool.setuptools]
py-modules = [
  "twitterapi_call",
  "twitterapi_fetch",
  "twitterapi_media",
  "twitterapi_client",
]

[tool.setuptools.package-dir]
"" = "scripts"
